# project-atlas

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  dev-logs.sh  dev-start.sh  dev-stop.sh  docker-compose.yml  pyproject.toml
data/: sample_projects.json
data/sample_emails/: change_order_emails.json  daily_report_emails.json  general_emails.json  meeting_minutes_emails.json  rfi_emails.json  submittal_emails.json  transmittal_emails.json
docs/adr/: ADR-001-vector-db-selection.md  ADR-002-chunking-strategy.md  ADR-003-multi-tenant-index.md  ADR-004-llm-cost-model.md  ADR-005-prompt-versioning.md
infra/: template.yaml
loadtest/: locustfile.py
services/cdc-processor/: package.json
services/webhook-receiver/: package.json
src/agents/: checkpoints.py  classifier.py  extractor.py  filer.py  graph.py  guardrails.py  search_agent.py  state.py
src/api/: deps.py  main.py  schemas.py
src/core/: config.py  exceptions.py  middleware.py  multi_tenant.py  observability.py
src/data/: generator.py
src/llm/: __init__.py  cache.py  client.py  fallback.py  prompt_registry.py  router.py  token_tracker.py
src/pipeline/: __init__.py  cdc_handler.py  chunking.py  embedding.py  processor.py
src/rag/: __init__.py  citations.py  feedback.py  pipeline.py  quality_metrics.py
src/search/: __init__.py  hybrid_search.py  index_manager.py  reranker.py  vector_store.py
src/tools/: __init__.py  filing_action.py  project_lookup.py  rfi_matcher.py  sender_history.py
tests/: conftest.py
tests/test_agents/: test_checkpoints.py  test_graph.py  (+1 more)
ui/: app.py
(+15 files in other folders)
